# nostr-vanity-address-generator

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cicd.yml
src/: main.rs
