[package]
name = "nostrgen"
version = "0.1.0"
description = "Nostr Vanity Address Generator"
repository = "https://github.com/chawyehsu/nostr-vanity-address-generator"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bech32 = "0.9.1"
clap = { version = "4.1.4", features = ["derive"] }
num_cpus = "1.15.0"
secp256k1 = { version = "0.26.0", features = ["rand-std"] }

[[bin]]
name = "nostrgen"
path = "src/main.rs"

[profile.release]
lto = "fat"
opt-level = 3
