[package]
name = "nostrgen"
version = "0.2.0"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
description = "Nostr Vanity Address Generator"
homepage = "https://github.com/chawyehsu/nostr-vanity-address-generator"
repository = "https://github.com/chawyehsu/nostr-vanity-address-generator"
keywords = ["nostr", "pow", "generator"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
rust-version = "1.75.0"

[dependencies]
bech32 = "0.9.1"
clap = { version = "4.1.4", features = ["derive"] }
num_cpus = "1.16.0"
secp256k1 = { version = "0.29.0", features = ["rand-std"] }

[[bin]]
name = "nostrgen"
path = "src/main.rs"

[profile.release]
lto = "fat"
opt-level = 3
